charts/ai/endpoints/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
  namespace: converse-llm
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
